Sexta entrega (#109)
merge sexta entrega