@@ -10,6 +10,7 @@ import domain.entities.EstrategiasNotificacion.EstrategiaSms.EstrategiaDeSms;
 import domain.entities.EstrategiasNotificacion.EstrategiaWhatsApp.EstrategiaDeWhatsApp;
 import domain.entities.InformacionPersonal;
 import domain.entities.Mascotas.*;
+
 import domain.entities.Organizacion.Organizacion;
 import domain.entities.Rescatista;
 import domain.entities.TipoDeDocumento;
@@ -18,18 +19,25 @@ import domain.entities.publicaciones.EstadoPublicacion;
 import domain.entities.publicaciones.PublicacionMascotaEncontradaSinChapita;
 import domain.repositories.Repositorio;
 import domain.repositories.factories.FactoryRepositorio;
-import javassist.expr.Cast;
 import spark.ModelAndView;
 import spark.Request;
 import spark.Response;
 import utils.localizador.LocalizadorDeOrganizacion;
 
 
+import javax.servlet.MultipartConfigElement;
+import javax.servlet.ServletException;
+import javax.servlet.http.Part;
+import java.io.IOException;
+import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicReference;
 
 public class MascotaEncontradaController {
     private Repositorio<Rescatista> repoRescatista;
@@ -42,6 +50,7 @@ public class MascotaEncontradaController {
     private Repositorio<MascotaEncontrada> repoMascotaEncontrada;
     private Repositorio<PublicacionMascotaEncontradaSinChapita> repoPublicacionSinChapita;
     private Repositorio<Hogar> repoHogares;
+    private Repositorio<Foto> repoFotos;
 
     public MascotaEncontradaController(){
         this.repoRescatista = FactoryRepositorio.get(Rescatista.class);
@@ -54,6 +63,7 @@ public class MascotaEncontradaController {
         this.repoMascotaEncontrada = FactoryRepositorio.get(MascotaEncontrada.class);
         this.repoPublicacionSinChapita = FactoryRepositorio.get(PublicacionMascotaEncontradaSinChapita.class);
         this.repoHogares = FactoryRepositorio.get(Hogar.class);
+        this.repoFotos = FactoryRepositorio.get(Foto.class);
     }
 
     public ModelAndView ubicacion(Request request, Response response) {
@@ -69,6 +79,8 @@ public class MascotaEncontradaController {
         infoPersonal.setNombre(request.queryParams("nombre"));
         infoPersonal.setFechaNacimiento(LocalDate.parse(request.queryParams("fechaNac")));
         infoPersonal.setNroDocumento(new Integer(request.queryParams("nroDoc")));
+
+        String te = request.queryParams("tipoDoc");
 
         switch(request.queryParams("tipoDoc")){
             case "1":
@@ -105,6 +117,8 @@ public class MascotaEncontradaController {
             EstrategiaDeNotificacion email = new EstrategiaEmail();
             estrategias.add(email);
             mensajeDuenioComunicacion = mensajeDuenioComunicacion + " Por EMAIL.";
+
+
         }
 
         Contacto contacto = new Contacto();
@@ -125,6 +139,7 @@ public class MascotaEncontradaController {
 
         repoContactos.agregar(contacto);
         repoInfoPers.agregar(infoPersonal);
+        rescatista.setInformacionPersonal(infoPersonal);
         repoRescatista.agregar(rescatista);
         mascota.setRescatista(rescatista);
         repoMascotaEncontrada.modificar(mascota);
@@ -137,11 +152,16 @@ public class MascotaEncontradaController {
             publicacion.setEstado(EstadoPublicacion.PENDIENTE);
             MascotaEncontradaSinChapita mascotaEncontradaSinChapita = repoMascotaSinChapita.buscar(rescatista.getMascotaEncontrada().getId());
             publicacion.setMascotaEncontradaSinChapita(mascotaEncontradaSinChapita);
+            publicacion.setTitulo(mascotaEncontradaSinChapita.getTipoMascota()+ " " + "Encontrado");
+            repoPublicacionSinChapita.agregar(publicacion);
+            //publicacion.setOrganizacion();
+
             LocalizadorDeOrganizacion localizadorDeOrganizacion = new LocalizadorDeOrganizacion();
             Organizacion org = localizadorDeOrganizacion.obtenerOrganizacionMasCercana(mascotaEncontradaSinChapita.getUbicacion());
 
             publicacion.setOrganizacion(org);
             repoPublicacionSinChapita.agregar(publicacion);
+
             parametros.put("publicacion",publicacion);
         } else {
             mascota.notificar(mensajeDuenioComunicacion);
@@ -158,6 +178,7 @@ public class MascotaEncontradaController {
     }
 
     public ModelAndView mascotaEncontrada(Request request, Response response) {
+
         if(request.params("idMascota") != null){
             Integer idMascota = new Integer(request.params("idMascota"));
             //mascota con chapita
@@ -176,6 +197,9 @@ public class MascotaEncontradaController {
     }
 
     public ModelAndView infoMascotaEncontradaConChapita(Request request, Response response) {
+        request.raw().setAttribute("org.eclipse.jetty.multipartConfig",
+                new MultipartConfigElement("/tmp", 100000000, 100000000, 1024));
+
         MascotaEncontradaConChapita mascotaEncontrada = new MascotaEncontradaConChapita();
         Mascota mascota = repoMascota.buscar(new Integer(request.params("idMascota")));
         mascotaEncontrada.setMascota(mascota);
@@ -193,17 +217,29 @@ public class MascotaEncontradaController {
         }
         repoUbicacion.agregar(ubicacion);
         repoMascotEncontConChapita.agregar(mascotaEncontrada);
+        List<String> fotos = guardarImagenes(request, mascotaEncontrada.getId(), "mascotasEncontradasConChapita");
+        mascotaEncontrada.setFotos(fotos);
+        repoMascotEncontConChapita.modificar(mascotaEncontrada);
 
         Map<String, Object> parametros = new HashMap<>();
         parametros.put("mascotaEncontrada", mascotaEncontrada);
         return new ModelAndView(parametros, "infoPersonal.hbs");
     }
 
-    public ModelAndView infoMascotaEncontradaSinChapita(Request request, Response response) {
+    public ModelAndView infoMascotaEncontradaSinChapita(Request request, Response response) throws ServletException, IOException {
+        request.raw().setAttribute("org.eclipse.jetty.multipartConfig",
+                new MultipartConfigElement("/tmp", 100000000, 100000000, 1024));
+
         MascotaEncontradaSinChapita mascotaEncontrada = new MascotaEncontradaSinChapita();
         mascotaEncontrada.setDescripcionEstadoEncotrado(request.queryParams("descEncontrada"));
+        if(request.queryParams("tipoMascota").equals("PERRO")){
+            mascotaEncontrada.setTipoMascota(TipoMascota.PERRO);
+        }else{
+            mascotaEncontrada.setTipoMascota(TipoMascota.GATO);
+        }
+        mascotaEncontrada.setSexo(request.queryParams("sexoMascota"));
         //TODO: agregar fecha en el form?
-        //mascotaEncontrada.setFechaEnLaQueSeEncontro();
+       // mascotaEncontrada.setFechaEnLaQueSeEncontro();
         Ubicacion ubicacion = guardarUbicacion(request);
         mascotaEncontrada.setUbicacion(ubicacion);
         //TODO: donde o como guardamos si tiene hogar de transito
@@ -214,8 +250,12 @@ public class MascotaEncontradaController {
             mascotaEncontrada.setHogarDeTransito(listaHogares.get(0));
         }
 
+
         repoUbicacion.agregar(ubicacion);
         repoMascotaSinChapita.agregar(mascotaEncontrada);
+        List<String> fotos = guardarImagenes(request, mascotaEncontrada.getId(), "mascotasEncontradasSinChapita");
+        mascotaEncontrada.setFotos(fotos);
+        repoMascotaSinChapita.modificar(mascotaEncontrada);
         Map<String, Object> parametros = new HashMap<>();
 
         parametros.put("mascotaEncontrada", mascotaEncontrada);
@@ -223,11 +263,40 @@ public class MascotaEncontradaController {
         return new ModelAndView(parametros, "infoPersonal.hbs");
     }
 
+
+    public static List<String> guardarImagenes(Request request, Integer id, String folder){
+
+        List<String> listaFotos = new ArrayList<>();
+        AtomicReference<Integer> counter = new AtomicReference<>(0);
+        try {
+            request.raw().getParts().forEach(part -> {
+                if(part.getName().equals("formFileMultiple")){
+                    String filename = part.getSubmittedFileName();
+                    Part uploadedFile = part;
+                    try (final InputStream in = uploadedFile.getInputStream()) {
+                        String fileName =folder+"/"+ id.toString()+"_"+ counter.toString();
+                        Files.copy(in, Paths.get(System.getProperty("user.dir")+"/src/main/resources/public/fotos/"+fileName));
+                        uploadedFile.delete();
+                        counter.getAndSet(counter.get() + 1);
+                        listaFotos.add(fileName);
+                    } catch(Exception e){
+                        throw new RuntimeException(e);
+                    }
+
+                }
+            });
+
+        } catch (Exception e) {
+
+        }
+        return listaFotos;
+    }
+
     private Ubicacion guardarUbicacion(Request request) {
         Ubicacion ubicacion = new Ubicacion();
         ubicacion.setDireccion(request.queryParams("direccion"));
-        ubicacion.setLatitud(new Double(request.queryParams("latitud")));
-        ubicacion.setLongitud(new Double(request.queryParams("longitud")));
+        ubicacion.setLatitud(Double.valueOf(request.queryParams("latitud")));
+        ubicacion.setLongitud(Double.valueOf(request.queryParams("longitud")));
 
         return ubicacion;
     }
